--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <span id="numbers"></span>
     </main>
-    <h1 id="result"></h1>
+    <h1 id="result" class=""></h1>
     <!-- /MAIN -->
     
     <!-- SCRIPT -->
